# blog_raasch

./: pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_author_post_autor_alter_post_data_publicacao.py  0003_alter_post_conteudo_alter_post_data_publicacao.py
blog/templates/blog/: detail.html  home.html
core/: settings.py
