[tool.poetry]
name = "blog-raasch"
version = "0.1.0"
description = ""
authors = ["RaaschDev <devraasch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
